This file lists bigger/noteworthy changes, only...

Version 1.1 (upcoming)
dyncall:
  o support for soft-float MIPS o32 & n64 (big- and little-endian, each)
dyncallback:
  o support for soft-float MIPS o32 & n64 (big- and little-endian, each)
dynload:
  o added UTF-8 support for pathnames on windows
doc:
  o more detail in support matrix for bi-endian platforms
tests:
  o dynload_plain test extended to test UTF-8 library paths
buildsys:
  o default ./configure: FreeBSD/mips*hf needed -mhard-float compiler flag set explicitly
  o better MacOS Mojave support in ./configure (Mojave dropped i386 builds)

Version 1.0 (2018/04/23)
dyncall:
  o PPC64 single-precision float fixes for more than 13 float args (thanks Masanori Mitsugi!)
  o fixed potential buffer overrun on ARM64
  o error code handling (dcGetError) changes, flag is now cleared (work still underway)
  o MIPS n64 ellipsis call fixes
  o ARM32 armhf ellipsis call fixes
  o fixed ARM32-THUMB stack alignment issues (found on Cortex-m0, thanks Darren Whobrey!)
  o better C++ compiler support (for pointer conversions)
dyncallback:
  o PPC64 single-precision float fixes for more than 13 float args (thanks Masanori Mitsugi!)
  o MIPS o32 (big- and little-endian), EABI (32 bit, little-endian) and n64 (big-endian) support
  o SPARC32 (v7/v8) support
  o SPARC64 (v9) support
  o PPC32 fixes for (old) Darwin/OS X systems
  o POSIX compliance: fallback for wx alloc on systems that don't have mmap()'s MAP_ANON
  o allocated space used for thunk now always W^X (req. for e.g. OpenBSD >= 6.0)
dynload:
  o major reliability/stability fixes for Mach-O dlSyms* functions to (thanks Stéphane Mons for help):
    better handle loading dylibs by symlink, relative path, random casing, etc.
    fixes to symbol name lookups that used wrong offsets before
    64-bit platform fixes (was broken on x64 and never supported on others)
  o allowing Mach-O dlSyms* lib to be used standalone (consistent with ELF and PE impls now)